Translation does not work.

--- a/i18/locales/en/common.json
+++ b/i18/locales/en/common.json
@@ -1,1 +1,7 @@
-{ "home": "Home", "meals": "Meals" }
+{
+  "home": "Home",
+  "meals": "Meals",
+  "ingredients": "Ingredients",
+  "shopping_list": "Shopping List",
+  "account": "Account"
+}
