--- a/i18/locales/pl/common.json
+++ b/i18/locales/pl/common.json
@@ -1,1 +1,7 @@
-{ "home": "Strona główna", "meals": "Posiłki" }
+{
+  "home": "Strona główna",
+  "meals": "Posiłki",
+  "ingredients": "Składniki",
+  "shopping_list": "Lista zakupów",
+  "account": "Konto"
+}
